// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CaruselItem/> render with optional props ::qaSelector as "{{qaSelector}}" 1`] = `
<div
  className="carusel-item"
  data-cy="{{qaSelector}}"
>
  <div
    className="carusel-item__image"
    data-cy="{{qaSelector}}"
    style={
      Object {
        "background": "url(\\"{{src}}\\") center no-repeat",
      }
    }
  />
  {{tags}}
</div>
`;

exports[`<CaruselItem/> render with required/default props 1`] = `
<div
  className="carusel-item"
  data-cy=""
>
  <div
    className="carusel-item__image"
    data-cy=""
    style={
      Object {
        "background": "url(\\"{{src}}\\") center no-repeat",
      }
    }
  />
  {{tags}}
</div>
`;
